--- a/index.html
+++ b/index.html
@@ -11,6 +11,22 @@
 </head>
 
 <body>
+    <header>
+        <div>
+            <h1>H & H</h1>
+            <h2>~ THE INTERIOR STANDARD ~</h2>
+        </div>
+        <img src="./assets/img/design-interior-1.jpg" alt="hero_pic">
+        <div class="header__nav">
+            <img src="./assets/img/logo.png" alt="logo">
+            <nav>
+                <a href="">H&H</a>
+                <a href="">OUR STORY</a>
+                <a href="">DESIGNS</a>
+                <a href="">CONTACT</a>
+            </nav>
+        </div>
+    </header>
 
 </body>
 
