✨ Add story_section

--- a/index.html
+++ b/index.html
@@ -27,7 +27,20 @@
             </nav>
         </div>
     </header>
+    <main>
+        <section>
+            <img src="./assets/img/story.jpg" alt="story_pic">
+            <article>
+                <h1>OUR STORY</h1>
+                <p>Furnishing your home can be quite overwhelming at times, at least that's how it was for us.</p>
+                <p>H&H was born to help others going through the maze that is inter ior design.</p>
+                <p>We decided to curate interior design modern trends, inspirations, tips and tricks from the vast
+                    interior collective to help you bring your home to life.</p>
+            </article>
+        </section>
 
+
+    </main>
 </body>
 
 </html>
