✨ Add featured_section

--- a/index.html
+++ b/index.html
@@ -31,15 +31,35 @@
         <section>
             <img src="./assets/img/story.jpg" alt="story_pic">
             <article>
-                <h1>OUR STORY</h1>
+                <h2>OUR STORY</h2 >
                 <p>Furnishing your home can be quite overwhelming at times, at least that's how it was for us.</p>
                 <p>H&H was born to help others going through the maze that is inter ior design.</p>
                 <p>We decided to curate interior design modern trends, inspirations, tips and tricks from the vast
                     interior collective to help you bring your home to life.</p>
             </article>
         </section>
-
-
+        <section class="section--light">
+            <article>
+                <h2>FEATURED</h2>
+                <p>Take a look at some of our featured picks that have made editorial debuts
+                </p>
+            </article>
+            <div class="section__gallery">
+                <figure>
+                    <img src="./assets/img/features1.jpg" alt="table">
+                    <figcaption>Image by Michael Jarmoluk from Pixabay</figcaption>
+                </figure>
+                <figure>
+                    <img src="./assets/img/features2.jpg" alt="couch">
+                    <figcaption>Image by StockSnap from Pixabay</figcaption>
+                </figure>
+                <figure>
+                    <img src="./assets/img/features3.jpg" alt="livingroom">
+                    <figcaption>Image by miapirttila from Pixabay</figcaption>
+                </figure>
+            </div>
+            <iframe width="560" src="https://www.youtube.com/embed/GI71fXmRrLM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </section>
     </main>
 </body>
 
