--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
         </div>
     </header>
     <main>
-        <section>
+        <section class="section--dark">
             <img src="./assets/img/story.jpg" alt="story_pic">
             <article>
-                <h2>OUR STORY</h2 >
+                <h2>OUR STORY</h2>
                 <p>Furnishing your home can be quite overwhelming at times, at least that's how it was for us.</p>
                 <p>H&H was born to help others going through the maze that is inter ior design.</p>
                 <p>We decided to curate interior design modern trends, inspirations, tips and tricks from the vast
@@ -58,9 +58,41 @@
                     <figcaption>Image by miapirttila from Pixabay</figcaption>
                 </figure>
             </div>
-            <iframe width="560" src="https://www.youtube.com/embed/GI71fXmRrLM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <iframe width="560" src="https://www.youtube.com/embed/GI71fXmRrLM" title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen></iframe>
         </section>
     </main>
+    <footer>
+        <section class="getInTouch">
+            <article>
+                <h2>GET IN TOUCH </h2>
+                <p>We would love to hear from you!</p>
+                <p>If you would like to receive our monthly catalogue subscribe by filling in the form with your name
+                    and email address.</p>
+            </article>
+            <section class="form">
+                <form action="#">
+                    <div>
+                        <label for="">Name</label>
+                        <input type="text" name="" id="" placeholder="Enter Name">
+                    </div>
+                    <div>
+                        <label for="">Email</label>
+                        <input type="text" name="" id="" placeholder="Enter Email">
+                    </div>
+                    <div>
+                        <label for="">Message</label>
+                        <textarea name="" id="" cols="30" rows="2" placeholder="Enter Message"></textarea>
+                    </div>
+                    <div>
+                    <input type="button" value="Submit">
+                </div>
+                </form>
+            </section>
+        </section>
+    </footer>
 </body>
 
 </html>
