--- a/index.html
+++ b/index.html
@@ -87,10 +87,19 @@
                         <textarea name="" id="" cols="30" rows="2" placeholder="Enter Message"></textarea>
                     </div>
                     <div>
-                    <input type="button" value="Submit">
-                </div>
+                        <input type="button" value="Submit">
+                    </div>
                 </form>
             </section>
+        </section>
+        <section class="footer">
+            <p>COPYRIGHT 2023</p>
+            <p>CREATE WITH LOVE</p>
+            <div>
+                <a href="#">PRIVACY</a>
+                <a href="#">TERMS</a>
+                <a href="#">CONTACT</a>
+            </div>
         </section>
     </footer>
 </body>
